	Any features that don't require BUG are not listed here. Refer to BULL's changelog for more information.

New Features:

- Regenerate map shortcut (ALT + G) [BULL]
- MapFinder from HOF Mod: Press ALT + CTRL + G to start/stop [BULL]
- Advanced Scoreboard
	Refuses to Talk (F) [BULL]
	Number of Cities (Q)
- Info Screen (F9)
	New expanded Wonders tab by DanF5771
		Shows constructed items (all known rivals)
		Shows items being built (must have enough EPs for City Visibility)
		Zoom to City button
	Remembers the selected tab like other screens
- BUG Religious Advisor (F7)

Improvements:

- BUG, BULL and Unofficial Patch versions are displayed when hovering over your flag [BULL]
- Min/Max Commerce Rate buttons have more accurate hover text [BULL]
- Foreign Advisor
	ACTIVE: Added number of turns until you can cancel each deal
	INFO: Hover details for trade with each rival [BULL]
	RESOURCES: Hovers show the reason an AI won't trade [BULL]
	TECHS: Hovers show the reason an AI won't trade [BULL]
- Finance Advisor
	Hover details for trade commerce and gold from specialists [BULL]
- Graphs (both BUG and Vanilla) now include a 'log scale' option
- Autolog
	Amount of gold from pillages
	Retreat and withdrawal [BULL]
	Collateral and flanking damage [BULL]
	Upgraded units [BULL]
- Strategy Overlay
	Configurable color palette

Bug Fixes:

- Fixed City Built event
- Changed Scoreboard items (WHEOOH, Number of Cities) so that they are optional


MODDING

New Features:

- BugDll module for creating Python features that depend on the DLL but work gracefully without it
- Added "dll" attribute to <mod>, <option>, <list>, <init>, <event>, <events> and <shortcut>
	The <mod>, <option> and <list> elements are still created but marked if the DLL isn't the correct version; the others are ignored
- DealUtil
	Deal class has new CvDeal functions, plus more
	Added several helpful module functions for testing TradeableItems values