@@ -46,7 +46,10 @@
 					type="boolean" default="True"/>
 			<option id="GreatPeopleRateBreakdown" key="Great People Rate Breakdown" 
 					type="boolean" default="True"/>
+					
 			<option id="BuildingSavedMaintenance" key="Building Saved Maintenance" 
+					type="boolean" default="True"/>
+			<option id="BuildingAdditionalFood" key="Building Additional Food" 
 					type="boolean" default="True"/>
 			<option id="BuildingAdditionalProduction" key="Building Additional Production" 
 					type="boolean" default="True"/>
